--- a/docs/global/modules/platform/partials/nav-local.adoc
+++ b/docs/global/modules/platform/partials/nav-local.adoc
@@ -1,10 +1,10 @@
 * Platform
 ** xref:platform:index.adoc[]
-** Tutorials
-+
---
-include::platform:partial$nav-tutorial.adoc[]
---
+// ** Tutorials
+// +
+// --
+// include::platform:partial$nav-tutorial.adoc[]
+// --
 ** How-To Guides
 +
 --
