--- a/docs/global/modules/platform/partials/nav-local.adoc
+++ b/docs/global/modules/platform/partials/nav-local.adoc
@@ -10,11 +10,11 @@
 --
 include::platform:partial$nav-howto.adoc[]
 --
-** Reference
-+
---
-include::platform:partial$nav-reference.adoc[]
---
+// ** Reference
+// +
+// --
+// include::platform:partial$nav-reference.adoc[]
+// --
 ** Explanation
 +
 --
