fix: use links that resolve to the correct version
We used refs, that explicitly specified the component, and the module. If the component is specified, then the version should have been specified.

Instead of specifying the version, we used refs without an explicit component.

See https://docs.antora.org/antora/latest/navigation/xrefs-and-link-text/#page-xrefs

--- a/docs/global/modules/platform/pages/index.adoc
+++ b/docs/global/modules/platform/pages/index.adoc
@@ -8,5 +8,5 @@ include::platform:partial$short-description.adoc[]
 
 == Getting Started
 
-include::modelix:ROOT:tutorial/build-component.adoc[leveloffset=+2]
+include::ROOT:tutorial/build-component.adoc[leveloffset=+2]
 
